# RegexpToNFA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RegexpToNFA.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: RegexpToNFA-0.1.0.0-inplace.conf  package.cache
src/: Glushkov.hs  Latex.hs  Parser.hs
